force-app/main/default/objects/Kitchen_Item__c/Kitchen_Item__c.object-meta.xml
<CustomObject>
    <description>An item found in the kitchen used for cooking</description>
    <label>Kitchen Item</label>
    <nameField>
        <displayFormat>K-{0000}</displayFormat>
        <label>Kitchen Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kitchen Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>