force-app/main/default/objects/Kitchen_Item__c/fields/Food_Group__c.field-meta.xml
<CustomField>
    <fullName>Food_Group__c</fullName>
    <description>Primary Food Group (Carb, Protein, Fat)</description>
    <inlineHelpText>Primary Food Group (Carb, Protein, Fat)</inlineHelpText>
    <label>Food Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Grain</fullName>
            </value>
            <value>
                <fullName>Starch</fullName>
            </value>
            <value>
                <fullName>Vegetable</fullName>
            </value>
            <value>
                <fullName>Fruit</fullName>
            </value>
            <value>
                <fullName>Meat &amp; Eggs</fullName>
            </value>
            <value>
                <fullName>Dairy</fullName>
            </value>
            <value>
                <fullName>Fats &amp; Oils</fullName>
            </value>
            <value>
                <fullName>Sugar</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>