force-app/main/default/objects/Kitchen_Item__c/fields/Kitchen_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Item_Description__c</fullName>
    <description>Kitchen Item Description</description>
    <inlineHelpText>Kitchen Item Description</inlineHelpText>
    <label>Kitchen Item Description</label>
    <type>TextArea</type>
</CustomField>