force-app/main/default/objects/Kitchen_Item__c/fields/Macronutrient__c.field-meta.xml
<CustomField>
    <fullName>Macronutrient__c</fullName>
    <description>Macronutrient</description>
    <inlineHelpText>Macronutrient</inlineHelpText>
    <label>Macronutrient</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fat</fullName>
            </value>
            <value>
                <fullName>Carb</fullName>
            </value>
            <value>
                <fullName>Protein</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>