force-app/main/default/objects/Kitchen_Item__c/fields/Parent_Kitchen_Item__c.field-meta.xml
<CustomField>
    <fullName>Parent_Kitchen_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This relationship allows the user to specify kitchen item categories</description>
    <inlineHelpText>This relationship allows the user to specify kitchen item categories</inlineHelpText>
    <label>Parent Kitchen Item</label>
    <referenceTo>Kitchen_Item__c</referenceTo>
    <relationshipLabel>Child Kitchen Items</relationshipLabel>
    <relationshipName>Child_Kitchen_Items</relationshipName>
    <type>Lookup</type>
</CustomField>