force-app/main/default/objects/Kitchen_Item__c/fields/UniqueName__c.field-meta.xml
<CustomField>
    <fullName>UniqueName__c</fullName>
    <description>Unique Name of this Kitchen Item (used by Recipe Controller to create ingredient records)</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique Name of this Kitchen Item (used by Recipe Controller to create ingredient records)</inlineHelpText>
    <label>UniqueName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>