force-app/main/default/objects/Kitchen_Item__c/recordTypes/Edible.recordType-meta.xml
<RecordType>
    <fullName>Edible</fullName>
    <active>true</active>
    <description>Edible Kitchen Items (useable in recipes)</description>
    <label>Edible</label>
</RecordType>