force-app/main/default/objects/Kitchen_Item__c/recordTypes/Non_Edible.recordType-meta.xml
<RecordType>
    <fullName>Non_Edible</fullName>
    <active>true</active>
    <description>Non-Edible Items (cannot be used as ingredients)</description>
    <label>Non-Edible</label>
</RecordType>